--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
   <header>
     <div class="logo-titulo">
-      <img src="https://via.placeholder.com/60" alt="Logo do site" />
-      <h1>Meu Site Incrível</h1>
+      <img src="img/logo.png" alt="Logo do site com uma imagem de um celeiro no centro, com uma folha em cima do celeiro, em baixo escrito agronews e logo abaixo está escrito do campo para a cidade" />
+      <h1>AGRONEWS/h1>
     </div>
     <nav>
       <ul class="menu">
