--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="logo-titulo">
       <img src="img/logo.png" alt="Logo do site com uma imagem de um celeiro no centro, com uma folha em cima do celeiro, em baixo escrito agronews e logo abaixo está escrito do campo para a cidade" />
-      <h1>AGRONEWS/h1>
+      <h1>AGRONEWS</h1>
     </div>
     <nav>
       <ul class="menu">
