--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <header class="mb-8">
             <div class="header-content">
-                <img="" alt="" class="h-20 w-auto mr-4 object-contain" onerror="this.onerror=null;this.src="logo.png">
+                <img src="logo.png" alt="Logotipo Agrinho 2025" class="h-20 w-auto mr-4 object-contain" onerror="this.onerror=null;this.src="logo.png">
                 <h1 class="text-5xl font-extrabold text-green-700 tracking-tight leading-tight">
                     AGRONEWS
                 </h1>
