--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="main-content-wrapper w-full max-w-6xl px-4 py-8">
 
         <header class="header-section mb-12 flex flex-col md:flex-row items-center md:items-start justify-center md:justify-start text-center md:text-left">
-            <img src="logo.png" alt="Logo" class="h-28 w-auto mr-0 md:mr-8 mb-4 md:mb-0 object-contain" onerror="this.onerror=null;this.src="img/logo.png;">
+            <img src="img/logo.png" alt="Logo" class="h-28 w-auto mr-0 md:mr-8 mb-4 md:mb-0 object-contain" onerror="this.onerror=null;this.src="img/logo.png;">
             <h1 class="main-title text-6xl font-extrabold tracking-tight leading-tight">
                 AGRONEWS
             </h1>
@@ -26,7 +26,7 @@
 
             <div class="journey-visual flex flex-col md:flex-row items-center justify-center space-y-10 md:space-y-0 md:space-x-16 my-12">
                 <div class="flex flex-col items-center">
-                    <img src="campo.png" alt="campo.png" class="image-card rounded-lg shadow-lg border-4 border-color-campo">
+                    <img src="img/campo.png" alt="campo.png" class="image-card rounded-lg shadow-lg border-4 border-color-campo">
                     <span class="location-label text-xl font-semibold mt-4">O Campo</span>
                 </div>
 
@@ -35,7 +35,7 @@
                 </div>
 
                 <div class="flex flex-col items-center">
-                    <img src="cidade.png" alt="cidade.png" class="image-card rounded-lg shadow-lg border-4 border-color-cidade">
+                    <img src="img/cidade.png" alt="cidade.png" class="image-card rounded-lg shadow-lg border-4 border-color-cidade">
                     <span class="location-label text-xl font-semibold mt-4">A Cidade</span>
                 </div>
             </div>
