--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <div class="journey-visual flex flex-col md:flex-row items-center justify-center space-y-10 md:space-y-0 md:space-x-16 my-12">
                 <div class="flex flex-col items-center">
-                    <img src="img/campo.png" alt="campo.png" class="image-card rounded-lg shadow-lg border-4 border-color-campo">
+                    <img src="img/campo.png" alt="campo" class="image-card rounded-lg shadow-lg border-4 border-color-campo">
                     <span class="location-label text-xl font-semibold mt-4">O Campo</span>
                 </div>
 
@@ -35,7 +35,7 @@
                 </div>
 
                 <div class="flex flex-col items-center">
-                    <img src="img/cidade.png" alt="cidade.png" class="image-card rounded-lg shadow-lg border-4 border-color-cidade">
+                    <img src="img/cidade.png" alt="cidade" class="image-card rounded-lg shadow-lg border-4 border-color-cidade">
                     <span class="location-label text-xl font-semibold mt-4">A Cidade</span>
                 </div>
             </div>
